# picture_server

./: .gitignore  Dockerfile  README.md  app.py  compose.yaml  pyproject.toml  session_manager.py  web_sources.yml
.github/workflows/: python-app.yml
static/styles/: image.css  index.css
templates/: image.html  index.html
tests/: test_domain_http.py  test_local_connection.py
